--- a/AutoOverlay/AutoOverlay.csproj
+++ b/AutoOverlay/AutoOverlay.csproj
@@ -16,7 +16,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -26,7 +26,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>
     </DefineConstants>
@@ -37,10 +37,15 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=4.8.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.4.8.1\lib\net40\MathNet.Numerics.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,42 +54,47 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AvsArgumentAttribute.cs" />
+    <Compile Include="AviSynth\AvsArgumentAttribute.cs" />
+    <Compile Include="Enum\AvsMatrix.cs" />
+    <Compile Include="Enum\ColorInterpolation.cs" />
     <Compile Include="Filters\ColorAdjust.cs" />
-    <Compile Include="Enum\ColorAdjustMode.cs" />
     <Compile Include="Filters\ColorRangeMask.cs" />
     <Compile Include="Filters\CustomOverlayRender.cs" />
-    <Compile Include="ExtraVideoInfo.cs" />
-    <Compile Include="FrameEventArgs.cs" />
-    <Compile Include="KeyboardHook.cs" />
+    <Compile Include="AviSynth\ExtraVideoInfo.cs" />
+    <Compile Include="Filters\ForceColorSpace.cs" />
+    <Compile Include="Forms\FrameEventArgs.cs" />
+    <Compile Include="Forms\KeyboardHook.cs" />
     <Compile Include="Filters\OverlayCompare.cs" />
-    <Compile Include="OverlayEditor.cs">
+    <Compile Include="Forms\OverlayEditor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OverlayEditor.Designer.cs">
+    <Compile Include="Forms\OverlayEditor.Designer.cs">
       <DependentUpon>OverlayEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Enum\OverlayEngineMode.cs" />
     <Compile Include="Filters\OverlayFilter.cs" />
-    <Compile Include="AbstractOverlayInfo.cs" />
+    <Compile Include="Overlay\AbstractOverlayInfo.cs" />
     <Compile Include="Filters\BilinearRotate.cs" />
-    <Compile Include="DynamicEnviroment.cs" />
-    <Compile Include="FileOverlayStat.cs" />
-    <Compile Include="FrameInterval.cs" />
+    <Compile Include="AviSynth\DynamicEnviroment.cs" />
+    <Compile Include="Overlay\FileOverlayStat.cs" />
+    <Compile Include="Overlay\FrameInterval.cs" />
     <Compile Include="Filters\OverlayMask.cs" />
-    <Compile Include="Enum\OverlayMode.cs" />
+    <Compile Include="Enum\FramingMode.cs" />
     <Compile Include="Filters\DynamicOverlayRender.cs" />
     <Compile Include="Filters\OverlayRender.cs" />
     <Compile Include="Filters\StaticOverlayRender.cs" />
-    <Compile Include="OverlayUtils.cs" />
-    <Compile Include="IOverlayStat.cs" />
+    <Compile Include="Overlay\OverlayUtils.cs" />
+    <Compile Include="Overlay\IOverlayStat.cs" />
     <Compile Include="Filters\OverlayConfig.cs" />
     <Compile Include="Filters\OverlayEngine.cs" />
-    <Compile Include="OverlayInfo.cs" />
+    <Compile Include="Overlay\OverlayInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Overlay\RectangleD.cs" />
+    <Compile Include="Overlay\SizeD.cs" />
+    <Compile Include="Overlay\OverlayStatFormat.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="OverlayEditor.resx">
+    <EmbeddedResource Include="Forms\OverlayEditor.resx">
       <DependentUpon>OverlayEditor.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
@@ -92,11 +102,16 @@
     <ProjectReference Include="..\AutoOverlayNative\AutoOverlayNative.vcxproj">
       <Project>{901c78ba-c997-418d-90cc-3d5ee93ee220}</Project>
       <Name>AutoOverlayNative</Name>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </ProjectReference>
     <ProjectReference Include="..\AvsFilterNet\AvsFilterNet\AvsFilterNet.vcxproj">
       <Project>{6679c5bf-bd2a-454f-9a97-719a00cd5be0}</Project>
       <Name>AvsFilterNet</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
